[master]
    - Removes non-compact rank symbols in favor of compact rank
    - All duplicate whitespaces / tabs / newlines are now removed from non-multiline fields
    - Fixed a bug in the IEEEXploreFetcher
    - Feature: Merge information from a DOI generated BibTex entry to an entry
    - Added more characters to HTML/Unicode converter
    - Feature: Push citations to Texmaker (SF: #318, #582)
    - Case changers improved to honor words (not yet more than single words) within {}
    - Feature: Added converters from HTML and Unicode to LaTeX on right click in text fields (#191)
    - Fixed bug 1282 (SourceForge) related to backslashes duplication.
    - Feature: Add an option to the FileList context menu to delete an associated file from the file system
    - Feature: Field names "Doi", "Ee", and "Url" are now written as "DOI", "EE", and "URL"
    - The default language is now automatically set to the system's locale.
    - Use correct encoding names (#155) and replace old encoding names in bibtex files. This changes the file header.
    - Feature: When pasting a Google search URL, meta data will be automatically stripped before insertion.
    - No longer write JabRef version to BibTex file header.
    - No longer add blank lines inside a bibtex entry
    - Feature: PDF auto download from ACS, arXiv, ScienceDirect, SpringerLink, and Google Scholar
    - List of authors is now auto generated `scripts/generate-authors.sh` and inserted into L10N About.html
    - Remove Mr.DLib support as MR.DLib will be shut down in 2015
    - Streamline logging API: Replace usages of java.util.logging with commons.logging
    - BREAKING: Remove plugin functionality.
    - Fixes Bug#1297: No console message on closing.
    - Fix bug #1285: Editing position is not lost on saving
    - Fix bug #194: JabRef starts again on Win XP and Win Vista
    - Remove support for custom icon themes. The user has to use the default one.