@@ -2348,19 +2348,16 @@ Log=Protokoll
 ISO_690=ISO_690
 
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=Bei_Einheiten_Klammern_hinzuf\u00fcgen_und_Trennzeichen_durch_ihre_nicht-umbrechenden_Varianten_ersetzen
-Add_new_entry_and_keep_both_old_entries=Neuen_Eintrag_hinzuf\u00fcgen_und_beide_alten_Eintr\u00e4ge_behalten
 Cancelled_merging_entries=Zusammenf\u00fchren_der_Eintr\u00e4ge_abgebrochen
 Error_in_entry=Fehler_im_Eintrag
 First_entry=Erster_Eintrag
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Einheiten_formatieren:_nicht-umbrechende_Trennzeichen_hinzuf\u00fcgen_und_bei_der_Suche_Gro\u00df-/Kleinschreibung_beibehalten
 Merge_entries=Eintr\u00e4ge_zusammenf\u00fchren
-Merged_entries_into_a_new_and_kept_the_old=Die_Eintr\u00e4ge_wurden_in_einen_neuen_zusammengef\u00fchrt_und_die_alten_behalten
-Merged_entries_into_a_new_and_removed_the_old=Die_Eintr\u00e4ge_wurden_in_einen_neuen_zusammengef\u00fchrt_und_die_alten_gel\u00f6scht
+Merged_entries=Die_Eintr\u00e4ge_wurden_zusammengef\u00fchrt
 Merged_entry=Eintrag_zusammengef\u00fchrt
 None=Kein(e/r)
 Parse=Parsen
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Unn\u00f6tige_$,_{_und_}_entfernen_und_benachbarte_Ziffern_in_Gleichungen_verschieben
-Replace_old_entries_with_new_entry=Alte_Eintr\u00e4ge_durch_einen_neuen_ersetzen
 Result=Ergebnis
 Second_entry=Zweiter_Eintrag
 Show_DOI_first=DOI_zuerst_anzeigen
