@@ -2334,20 +2334,17 @@ Log=Log
 
 ISO_690=ISO_690
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units
-Add_new_entry_and_keep_both_old_entries=Add_new_entry_and_keep_both_old_entries
 Cancelled_merging_entries=Cancelled_merging_entries
 Error_in_entry=Error_in_entry
 First_entry=First_entry
 
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search
 Merge_entries=Merge_entries
-Merged_entries_into_a_new_and_kept_the_old=Merged_entries_into_a_new_and_kept_the_old
-Merged_entries_into_a_new_and_removed_the_old=Merged_entries_into_a_new_and_removed_the_old
+Merged_entries=Merged_entries
 Merged_entry=Merged_entry
 None=None
 Parse=Parse
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations
-Replace_old_entries_with_new_entry=Replace_old_entries_with_new_entry
 Result=Result
 Second_entry=Second_entry
 Show_DOI_first=Show_DOI_first
