@@ -1488,19 +1488,16 @@ Get_BibTeX_entry_from_DiVA=Obtener_entrada_BibTeX_desde_DiVA
 Log=Registro
 ISO_690=ISO_690
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=A\u00f1adir_par\u00e9ntesis_y_reemplazar_separadores_con_sus_versiones_no_divisoras_para_unidades.
-Add_new_entry_and_keep_both_old_entries=A\u00f1adir_nueva_entrada_y_mantener_las_dos_entradas_antiguas
 Cancelled_merging_entries=Cancelar_fusionado_de_entradas
 Error_in_entry=Error_en_la_entrada
 First_entry=Primera_entrada
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Formatear_unidades_a\u00f1adiendo_separadores_no_divisores_y_manteniendo_may\u00fasculas/min\u00fasculas_correctamente_en_la_b\u00fasqueda
 Merge_entries=Fusionar_entradas
-Merged_entries_into_a_new_and_kept_the_old=Fusionar_entradas_en_una_nueva_y_mantener_la_antigua
-Merged_entries_into_a_new_and_removed_the_old=Entradas_fusionadas_en_una_nueva_y_eliminada_la_antigua
+Merged_entries=Fusionar_entradas_en_una_nueva_y_mantener_la_antigua
 Merged_entry=Entrada_fusionada
 None=Ning\u00fan
 Parse=Analizar
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Eliminar_$,_{_y_}_innecesarios_y_mover_n\u00fameros_adyacentes_a_ecuaciones
-Replace_old_entries_with_new_entry=Reemplazar_viejas_entradas_con_la_nueva
 Result=Resultado
 Second_entry=Segunda_entrada
 Show_DOI_first=Mostrar_DOI_en_primer_lugar
