@@ -2332,20 +2332,17 @@ Log=
 
 ISO_690=
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=
-Add_new_entry_and_keep_both_old_entries=
 Cancelled_merging_entries=
 Error_in_entry=
 First_entry=
 
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=
 Merge_entries=
-Merged_entries_into_a_new_and_kept_the_old=
-Merged_entries_into_a_new_and_removed_the_old=
+Merged_entries=
 Merged_entry=
 None=
 Parse=
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=
-Replace_old_entries_with_new_entry=
 Result=
 Second_entry=
 Show_DOI_first=
