@@ -1531,19 +1531,16 @@ Log=Message
 ISO_690=ISO_690
 
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=Ajouter_des_crochets_et_remplacer_les_s\u00e9parateurs_par_leur_version_non_interruptible_pour_les_unit\u00e9s
-Add_new_entry_and_keep_both_old_entries=Ajouter_une_nouvelle_entr\u00e9e_et_conserver_les_deux_anciennes_entr\u00e9es
 Cancelled_merging_entries=Fusion_des_entr\u00e9es_interrompues
 Error_in_entry=Erreur_dans_l'entr\u00e9e
 First_entry=Premi\u00e8re_entr\u00e9e
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Formatter_les_unit\u00e9s_en_ajouter_des_s\u00e9parateurs_non_interruptibles_et_conserver_la_casse_correcte_pour_la_recherche
 Merge_entries=Fusionner_les_entr\u00e9es
-Merged_entries_into_a_new_and_kept_the_old=Entr\u00e9es_fusionn\u00e9es_dans_une_nouvelle_et_anciennes_conserv\u00e9es
-Merged_entries_into_a_new_and_removed_the_old=Entr\u00e9es_fusionn\u00e9es_dans_une_nouvelle_et_anciennes_supprim\u00e9es
+Merged_entries=Entr\u00e9es_fusionn\u00e9es_dans_une_nouvelle_et_anciennes_conserv\u00e9es
 Merged_entry=Entr\u00e9e_fusionn\u00e9e
 None=Aucune
 Parse=Analyser
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Supprimer_les_$,_{,_et_}_inutiles_et_d\u00e9placer_les_nombres_adjacents_dans_des_\u00e9quations
-Replace_old_entries_with_new_entry=Remplacer_les_anciennes_entr\u00e9es_par_la_nouvelle
 Result=R\u00e9sultat
 Second_entry=Deuxi\u00e8me_entr\u00e9e
 Show_DOI_first=Montrer_le_DOI_en_premier
