@@ -1614,19 +1614,16 @@ Log=Registro
 ISO_690=ISO_690
 
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=Aggiungere_le_parentesi_e_sostituire_i_separatori_con_le_loro_versioni_non_interrompiblili_per_le_unit\u00e0
-Add_new_entry_and_keep_both_old_entries=Aggiungi_una_nuova_voce_e_conserva_entrambe_le_due_vecchie_voci
 Cancelled_merging_entries=Accorpamento_delle_voci_cancellato
 Error_in_entry=Errore_nella_voce
 First_entry=Prima_voce
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Struttura_le_unit\u00e0_aggiungendo_separatori_non_interrompibili_e_conservare_la_corretta_capitalizzazione_per_la_ricerca
 Merge_entries=Accorpa_le_voci
-Merged_entries_into_a_new_and_kept_the_old=Accorpate_le_voci_in_una_nuova_e_mantenute_le_vecchie
-Merged_entries_into_a_new_and_removed_the_old=Accorpate_le_voci_in_una_nuova_e_rimosse_le_vecchie
+Merged_entries=Accorpate_le_voci_in_una_nuova_e_mantenute_le_vecchie
 Merged_entry=Voce_accorpata
 None=Nessuna
 Parse=Analizza
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Rimovi_$,_{,_e_}_non_necessari_e_sposta_i_numeri_adiacenti_nelle_equazioni
-Replace_old_entries_with_new_entry=Sostituisci_le_vecchie_voci_con_la_nuova
 Result=Risultato
 Second_entry=Seconda_voce
 Show_DOI_first=Mostrare_prima_il_DOI
