@@ -2334,19 +2334,16 @@ Log=\u30ed\u30b0
 ISO_690=ISO_690
 
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=\u6ce2\u62ec\u5f27\u3092\u8ffd\u52a0\u3057\u3001\u533a\u5207\u308a\u6587\u5b57\u3092\u5358\u4f4d\u306e\u975e\u6539\u884c\u7248\u3067\u7f6e\u304d\u63db\u3048\u308b
-Add_new_entry_and_keep_both_old_entries=\u53e4\u3044\u9805\u76ee\u3092\u7dad\u6301\u3057\u305f\u307e\u307e\u65b0\u898f\u9805\u76ee\u3092\u8ffd\u52a0
 Cancelled_merging_entries=\u9805\u76ee\u306e\u7d71\u5408\u3092\u53d6\u308a\u6d88\u3057\u307e\u3057\u305f
 Error_in_entry=\u9805\u76ee\u306b\u30a8\u30e9\u30fc\u304c\u3042\u308a\u307e\u3059
 First_entry=\u7b2c\u4e00\u9805\u76ee
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=\u975e\u6539\u884c\u533a\u5207\u308a\u3092\u4ed8\u3057\u3066\u691c\u7d22\u3067\u5927\u6587\u5b57\u5c0f\u6587\u5b57\u304c\u6b63\u3057\u304f\u306a\u308b\u3088\u3046\u5358\u4f4d\u3092\u6574\u5f62
 Merge_entries=\u9805\u76ee\u3092\u7d71\u5408
-Merged_entries_into_a_new_and_kept_the_old=\u7d71\u5408\u9805\u76ee\u3092\u65b0\u898f\u306b\u8ffd\u52a0\u3057\u65e7\u9805\u76ee\u3092\u6b8b\u3057\u307e\u3057\u305f
-Merged_entries_into_a_new_and_removed_the_old=\u7d71\u5408\u9805\u76ee\u3092\u65b0\u898f\u306b\u8ffd\u52a0\u3057\u3001\u65e7\u9805\u76ee\u3092\u524a\u9664\u3057\u307e\u3057\u305f
+Merged_entries=\u7d71\u5408\u9805\u76ee\u3092\u65b0\u898f\u306b\u8ffd\u52a0\u3057\u65e7\u9805\u76ee\u3092\u6b8b\u3057\u307e\u3057\u305f
 Merged_entry=\u9805\u76ee\u3092\u7d71\u5408\u3057\u307e\u3057\u305f
 None=\u306a\u3057
 Parse=\u89e3\u6790
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=\u4e0d\u8981\u306a$\u30fb{\u30fb}\u3092\u524a\u9664\u3057\u3066\u6570\u5f0f\u306b\u96a3\u63a5\u3059\u308b\u756a\u53f7\u3092\u5165\u308c\u308b
-Replace_old_entries_with_new_entry=\u53e4\u3044\u9805\u76ee\u3092\u65b0\u898f\u9805\u76ee\u3067\u7f6e\u304d\u63db\u3048\u308b
 Result=\u7d50\u679c
 Second_entry=\u7b2c\u4e8c\u9805\u76ee
 Show_DOI_first=DOI\u3092\u6700\u521d\u306b\u8868\u793a
