@@ -1499,19 +1499,16 @@ Log=Log
 ISO_690=ISO_690
 
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=Adicionar_colchetes_e_substituir_separadores_por_suas_vers\u00f5es_sem_quebras_de_unidades
-Add_new_entry_and_keep_both_old_entries=Adicionar_nova_refer\u00eancia_e_manter_ambas_entradas_antigas
 Cancelled_merging_entries=Uni\u00e3o_das_refer\u00eancias_cancelada
 Error_in_entry=Erro_na_refer\u00eancia
 First_entry=Primeira_refer\u00eancia
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Formatar_unidades_adicionando_separadores_sem_quebras_e_manter_mai\u00fasculas_e_min\u00fasculas_na_busca
 Merge_entries=Mesclar_refer\u00eancias
-Merged_entries_into_a_new_and_kept_the_old=Mesclou_refer\u00eancias_em_uma_nova_e_manteve_a_antiga
-Merged_entries_into_a_new_and_removed_the_old=Mesclou_as_refer\u00eancias_em_uma_nova_e_removeu_a_antiga
+Merged_entries=Mesclou_refer\u00eancias_em_uma_nova_e_manteve_a_antiga
 Merged_entry=Refer\u00eancia_mesclada
 None=None
 Parse=Interpretar
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Remover_$,_{,_e_}_desnecess\u00e1rios_e_mover_os_n\u00fameros_adjacentes_para_equa\u00e7\u00f5es
-Replace_old_entries_with_new_entry=Substituir_refer\u00eancias_antigas_pela_nova_refer\u00eancia
 Result=Resultado
 Second_entry=Segunda_refer\u00eancia
 Show_DOI_first=Mostrar_DOI_antes
