@@ -2332,20 +2332,17 @@ Log=Отчет
 
 ISO_690=ISO_690
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=Добавление_скобок_и_замена_символов_разделителей_на_неразрывные_символы_для_единиц
-Add_new_entry_and_keep_both_old_entries=Добавить_новую_запись_и_сохранить_обе_старые_записи
 Cancelled_merging_entries=Слияние_записей_отменено
 Error_in_entry=Ошибка_в_записи
 First_entry=Первая_запись
 
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Форматирование_единиц_с_помощью_неразрывных_символов-разделителей_с_сохранением_правильного_регистра_при_поиске
 Merge_entries=Объединение_записей
-Merged_entries_into_a_new_and_kept_the_old=Записи_с_объединением_в_новую_и_сохранением_старой
-Merged_entries_into_a_new_and_removed_the_old=Записи_с_объединением_в_новую_и_удалением_старой
+Merged_entries=Записи_с_объединением_в_новую_и_сохранением_старой
 Merged_entry=Запись_с_объединением
 None=Ни_одной
 Parse=Анализ
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Удаление_из_формул_лишних_символов_$,_{,_}_и_размещение_в_них_прилежащих_чисел
-Replace_old_entries_with_new_entry=Заменить_старые_записи_на_новую
 Result=Результат
 Second_entry=Вторая_запись
 Show_DOI_first=Показать_сначала_DOI
