@@ -1522,19 +1522,16 @@ Log=Kay\u0131t
 
 ISO_690=ISO_690
 Add_brackets_and_replace_separators_with_their_non-breaking_version_for_units=K\u00f6\u015feli_parantezler_ekle_ve_ayra\u00e7lar\u0131_birimler_i\u00e7in_b\u00f6l\u00fcnemez_s\u00fcr\u00fcmleriyle_de\u011fi\u015ftir
-Add_new_entry_and_keep_both_old_entries=Yeni_girdi_ekle_ve_her_iki_eski_girdiyi_de_koru
 Cancelled_merging_entries=Girdilerin_birle\u015ftirilmesi_iptal_edildi
 Error_in_entry=Girdide_hata
 First_entry=\u0130lk_girdi
 Format_units_by_adding_non-breaking_separators_and_keeping_the_correct_case_on_search=Birimleri_b\u00f6l\u00fcnemez_ayra\u00e7lar_ekleyerek_ve_aramadaki_b\u00fcy\u00fck_k\u00fc\u00e7\u00fck_harfleri_koruyarak_bi\u00e7imle
 Merge_entries=Girdileri_birle\u015ftir
-Merged_entries_into_a_new_and_kept_the_old=Girdiler_yeni_birine_birle\u015ftirildi_ve_eskiler_korundu
-Merged_entries_into_a_new_and_removed_the_old=Girdiler_yeni_birine_birle\u015ftirildi_ve_eskiler_silindi
+Merged_entries=Girdiler_yeni_birine_birle\u015ftirildi_ve_eskiler_korundu
 Merged_entry=Birle\u015fmi\u015f_girdi
 None=Hi\u00e7
 Parse=Ayr\u0131\u015ft\u0131r
 Remove_unneccessary_$,_{,_and_}_and_move_adjacent_numbers_into_equations=Gereksiz_$,_{,_ve_}'lar\u0131_sil_ve_biti\u015fik_numaralar\u0131_denkleme_ta\u015f\u0131
-Replace_old_entries_with_new_entry=Eski_girdileri_yenisiyle_de\u011fi\u015ftir
 Result=Sonu\u00e7
 Second_entry=\u0130kinci_girdi
 Show_DOI_first=\u00d6nce_DOI'y\u0131_g\u00f6ster
